--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,16 +8,42 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">test</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">507,244</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">214,476</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="6">com.marina.tests.Mod_7_RatesStorage</td><td><a href="#m0">TC_1106</a></td><td rowspan="1">1701448163360</td><td rowspan="1">45452</td></tr><tr class="passedeven"><td><a href="#m1">createGroup_verifyGroup_TC_1101</a></td><td rowspan="1">1701447739233</td><td rowspan="1">52211</td></tr><tr class="passedeven"><td><a href="#m2">newlyGroupCreated_RevisionHisotryEmpty_TC_1102</a></td><td rowspan="1">1701447822367</td><td rowspan="1">56866</td></tr><tr class="passedeven"><td><a href="#m3">nighlty_addNew_Bucket_andVerifyBucket_TC_1103</a></td><td rowspan="1">1701447918605</td><td rowspan="1">16297</td></tr><tr class="passedeven"><td><a href="#m4">nightly_add_record_without_holiday_TC_1105</a></td><td rowspan="1">1701448037178</td><td rowspan="1">91837</td></tr><tr class="passedeven"><td><a href="#m5">nightly_delete_newley_bucketAndVerify_TC_1104</a></td><td rowspan="1">1701447972713</td><td rowspan="1">26883</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.marina.tests.Mod_7_RatesStorage</td><td><a href="#m0">nightly_add_record_without_holiday_TC_1105</a></td><td rowspan="1">1701781025173</td><td rowspan="1">183995</td></tr></tbody>
 </table>
-<h2>test</h2><h3 id="m0">com.marina.tests.Mod_7_RatesStorage#TC_1106</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.marina.tests.Mod_7_RatesStorage#createGroup_verifyGroup_TC_1101</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.marina.tests.Mod_7_RatesStorage#newlyGroupCreated_RevisionHisotryEmpty_TC_1102</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.marina.tests.Mod_7_RatesStorage#nighlty_addNew_Bucket_andVerifyBucket_TC_1103</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.marina.tests.Mod_7_RatesStorage#nightly_add_record_without_holiday_TC_1105</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">com.marina.tests.Mod_7_RatesStorage#nightly_delete_newley_bucketAndVerify_TC_1104</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.marina.tests.Mod_7_RatesStorage#nightly_add_record_without_holiday_TC_1105</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.ArrayIndexOutOfBoundsException: Index 7 out of bounds for length 7
+	at com.marina.pages.RatesStorageNightlyPricePage.calendar_create(RatesStorageNightlyPricePage.java:456)
+	at com.marina.tests.Mod_7_RatesStorage.nightly_add_record_without_holiday_TC_1105(Mod_7_RatesStorage.java:176)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
+	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+	at java.base/java.lang.reflect.Method.invoke(Method.java:568)
+	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:134)
+	at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:597)
+	at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:173)
+	at org.testng.internal.MethodRunner.runInSequence(MethodRunner.java:46)
+	at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:816)
+	at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:146)
+	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
+	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+	at org.testng.TestRunner.privateRun(TestRunner.java:766)
+	at org.testng.TestRunner.run(TestRunner.java:587)
+	at org.testng.SuiteRunner.runTest(SuiteRunner.java:384)
+	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:378)
+	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:337)
+	at org.testng.SuiteRunner.run(SuiteRunner.java:286)
+	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
+	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
+	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1187)
+	at org.testng.TestNG.runSuitesLocally(TestNG.java:1109)
+	at org.testng.TestNG.runSuites(TestNG.java:1039)
+	at org.testng.TestNG.run(TestNG.java:1007)
+	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
+	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
+	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
+</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
