--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -12,32 +12,7 @@
 <tr>
 <td>&nbsp;</td>
 <td>createGroup_verifyGroup_TC_1101</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>nightly_delete_newley_bucketAndVerify_TC_1104</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC_1106</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>nightly_add_record_without_holiday_TC_1105</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>nighlty_addNew_Bucket_andVerifyBucket_TC_1103</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>newlyGroupCreated_RevisionHisotryEmpty_TC_1102</td>
-<td>regression smoke </td>
+<td>regression smoke sanity </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
