--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,44 +1,68 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:29:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.TC_1106()[pri:6, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">TC_1106</td> 
-  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6b85f9">  <td>23/12/01 21:30:15</td>   <td>52116</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:23:11</td>   <td>-371897</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:24:39</td>   <td>-284113</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:25:34</td>   <td>-228454</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:26:39</td>   <td>-163755</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:28:49</td>   <td>-34342</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:30:08</td>   <td>45460</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:21:48</td>   <td>-455094</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:23:13</td>   <td>-369733</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:24:42</td>   <td>-280386</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:25:37</td>   <td>-225801</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:26:42</td>   <td>-160435</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:28:51</td>   <td>-31743</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:22:19</td>   <td>-424127</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.createGroup_verifyGroup_TC_1101()[pri:1, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">createGroup_verifyGroup_TC_1101</td> 
-  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6b85f9">  <td>23/12/01 21:21:47</td>   <td>-455886</td> <td title="&gt;&gt;TestBase.loadConfig()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&gt;&gt;loadConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:23:42</td>   <td>-340993</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.newlyGroupCreated_RevisionHisotryEmpty_TC_1102()[pri:2, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">newlyGroupCreated_RevisionHisotryEmpty_TC_1102</td> 
-  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:25:18</td>   <td>-244756</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.nighlty_addNew_Bucket_andVerifyBucket_TC_1103()[pri:3, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">nighlty_addNew_Bucket_andVerifyBucket_TC_1103</td> 
-  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:27:17</td>   <td>-126182</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.nightly_add_record_without_holiday_TC_1105()[pri:5, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">nightly_add_record_without_holiday_TC_1105</td> 
-  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:26:12</td>   <td>-190647</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.nightly_delete_newley_bucketAndVerify_TC_1104()[pri:4, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">nightly_delete_newley_bucketAndVerify_TC_1104</td> 
-  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="ee8876">  <td>23/12/05 00:05:38</td>   <td>0</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:51:51</td>   <td>-827008</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:53:10</td>   <td>-747510</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:54:30</td>   <td>-667455</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:55:06</td>   <td>-631589</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:56:43</td>   <td>-534798</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:58:35</td>   <td>-422424</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:59:10</td>   <td>-387167</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/05 00:01:10</td>   <td>-267371</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/05 00:03:16</td>   <td>-141828</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/05 00:05:33</td>   <td>-4269</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:50:38</td>   <td>-899788</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:51:53</td>   <td>-824123</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:53:12</td>   <td>-745482</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:54:33</td>   <td>-664453</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:55:11</td>   <td>-626892</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:56:46</td>   <td>-531586</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:58:38</td>   <td>-419876</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:59:13</td>   <td>-384823</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/05 00:01:14</td>   <td>-264036</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/05 00:03:19</td>   <td>-138511</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:51:00</td>   <td>-877920</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.createGroup_verifyGroup_TC_1101()[pri:1, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">createGroup_verifyGroup_TC_1101</td> 
+  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:52:16</td>   <td>-801185</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.createGroup_verifyGroup_TC_1101()[pri:1, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">createGroup_verifyGroup_TC_1101</td> 
+  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:53:30</td>   <td>-727817</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.createGroup_verifyGroup_TC_1101()[pri:1, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">createGroup_verifyGroup_TC_1101</td> 
+  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:54:52</td>   <td>-645146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.createGroup_verifyGroup_TC_1101()[pri:1, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">createGroup_verifyGroup_TC_1101</td> 
+  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:55:28</td>   <td>-609281</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.createGroup_verifyGroup_TC_1101()[pri:1, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">createGroup_verifyGroup_TC_1101</td> 
+  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:57:08</td>   <td>-509369</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.createGroup_verifyGroup_TC_1101()[pri:1, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">createGroup_verifyGroup_TC_1101</td> 
+  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:58:56</td>   <td>-401221</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.createGroup_verifyGroup_TC_1101()[pri:1, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">createGroup_verifyGroup_TC_1101</td> 
+  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:59:33</td>   <td>-364973</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.createGroup_verifyGroup_TC_1101()[pri:1, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">createGroup_verifyGroup_TC_1101</td> 
+  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/05 00:01:32</td>   <td>-245658</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.createGroup_verifyGroup_TC_1101()[pri:1, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">createGroup_verifyGroup_TC_1101</td> 
+  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/05 00:03:38</td>   <td>-119510</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.createGroup_verifyGroup_TC_1101()[pri:1, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">createGroup_verifyGroup_TC_1101</td> 
+  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="ee8876">  <td>23/12/04 23:50:37</td>   <td>-900231</td> <td title="&gt;&gt;TestBase.loadConfig()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&gt;&gt;loadConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
 </table>
