--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,44 +1,68 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6b85f9">  <td>23/12/01 21:21:47</td>   <td>0</td> <td title="&gt;&gt;TestBase.loadConfig()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&gt;&gt;loadConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:21:48</td>   <td>792</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:22:19</td>   <td>31759</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.createGroup_verifyGroup_TC_1101()[pri:1, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">createGroup_verifyGroup_TC_1101</td> 
-  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:23:11</td>   <td>83989</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:23:13</td>   <td>86153</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:23:42</td>   <td>114893</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.newlyGroupCreated_RevisionHisotryEmpty_TC_1102()[pri:2, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">newlyGroupCreated_RevisionHisotryEmpty_TC_1102</td> 
-  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:24:39</td>   <td>171773</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:24:42</td>   <td>175500</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:25:18</td>   <td>211130</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.nighlty_addNew_Bucket_andVerifyBucket_TC_1103()[pri:3, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">nighlty_addNew_Bucket_andVerifyBucket_TC_1103</td> 
-  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:25:34</td>   <td>227432</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:25:37</td>   <td>230085</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:26:12</td>   <td>265239</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.nightly_delete_newley_bucketAndVerify_TC_1104()[pri:4, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">nightly_delete_newley_bucketAndVerify_TC_1104</td> 
-  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:26:39</td>   <td>292131</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:26:42</td>   <td>295451</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:27:17</td>   <td>329704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.nightly_add_record_without_holiday_TC_1105()[pri:5, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">nightly_add_record_without_holiday_TC_1105</td> 
-  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:28:49</td>   <td>421544</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:28:51</td>   <td>424143</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:29:23</td>   <td>455886</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.TC_1106()[pri:6, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">TC_1106</td> 
-  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6f8776">  <td>23/12/01 21:30:08</td>   <td>501346</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
-<tr bgcolor="6b85f9">  <td>23/12/01 21:30:15</td>   <td>508002</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="ee8876">  <td>23/12/04 23:50:37</td>   <td>0</td> <td title="&gt;&gt;TestBase.loadConfig()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&gt;&gt;loadConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:50:38</td>   <td>443</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:51:00</td>   <td>22311</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.createGroup_verifyGroup_TC_1101()[pri:1, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">createGroup_verifyGroup_TC_1101</td> 
+  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:51:51</td>   <td>73223</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:51:53</td>   <td>76108</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:52:16</td>   <td>99046</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.createGroup_verifyGroup_TC_1101()[pri:1, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">createGroup_verifyGroup_TC_1101</td> 
+  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:53:10</td>   <td>152721</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:53:12</td>   <td>154749</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:53:30</td>   <td>172414</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.createGroup_verifyGroup_TC_1101()[pri:1, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">createGroup_verifyGroup_TC_1101</td> 
+  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:54:30</td>   <td>232776</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:54:33</td>   <td>235778</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:54:52</td>   <td>255085</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.createGroup_verifyGroup_TC_1101()[pri:1, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">createGroup_verifyGroup_TC_1101</td> 
+  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:55:06</td>   <td>268642</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:55:11</td>   <td>273339</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:55:28</td>   <td>290950</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.createGroup_verifyGroup_TC_1101()[pri:1, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">createGroup_verifyGroup_TC_1101</td> 
+  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:56:43</td>   <td>365433</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:56:46</td>   <td>368645</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:57:08</td>   <td>390862</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.createGroup_verifyGroup_TC_1101()[pri:1, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">createGroup_verifyGroup_TC_1101</td> 
+  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:58:35</td>   <td>477807</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:58:38</td>   <td>480355</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:58:56</td>   <td>499010</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.createGroup_verifyGroup_TC_1101()[pri:1, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">createGroup_verifyGroup_TC_1101</td> 
+  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:59:10</td>   <td>513064</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:59:13</td>   <td>515408</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/04 23:59:33</td>   <td>535258</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.createGroup_verifyGroup_TC_1101()[pri:1, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">createGroup_verifyGroup_TC_1101</td> 
+  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/05 00:01:10</td>   <td>632860</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/05 00:01:14</td>   <td>636195</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/05 00:01:32</td>   <td>654573</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.createGroup_verifyGroup_TC_1101()[pri:1, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">createGroup_verifyGroup_TC_1101</td> 
+  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/05 00:03:16</td>   <td>758403</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/05 00:03:19</td>   <td>761720</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/05 00:03:38</td>   <td>780721</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.createGroup_verifyGroup_TC_1101()[pri:1, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">createGroup_verifyGroup_TC_1101</td> 
+  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/12/05 00:05:33</td>   <td>895962</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="ee8876">  <td>23/12/05 00:05:38</td>   <td>900231</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@614ca7df]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
 </table>
